--- a/src/app/editor/editor.component.scss
+++ b/src/app/editor/editor.component.scss
@@ -69,3 +69,12 @@ section {
   bottom: 0;
   width: 190mm;
 }
+
+.bottomRightCover {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 40%;
+  text-align: right;
+  padding: 15%
+}
