--- a/src/app/projects/project-table/project-table.component.html
+++ b/src/app/projects/project-table/project-table.component.html
@@ -36,15 +36,15 @@
     </ng-container>
     <ng-container matColumnDef="auditor">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Auditor</mat-header-cell>
-      <mat-cell *matCellDef="let element"><div *ngFor="let aud of element.auditor">{{aud.name + ','}}</div></mat-cell>
+      <mat-cell *matCellDef="let element"><a *ngFor="let aud of element.auditor">{{aud.name +','}}</a></mat-cell>
     </ng-container>
     <ng-container matColumnDef="reviewer">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Reviewer</mat-header-cell>
-      <mat-cell *matCellDef="let element"><div *ngFor="let rev of element.reviewer">{{rev.name + ','}}</div></mat-cell>
+      <mat-cell *matCellDef="let element"><a *ngFor="let rev of element.reviewer">{{rev.name + ','}}</a></mat-cell>
     </ng-container>
     <ng-container matColumnDef="projectManager">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Project Manager</mat-header-cell>
-      <mat-cell *matCellDef="let element"><div *ngFor="let pm of element.projectManager">{{pm.name + ','}}</div></mat-cell>
+      <mat-cell *matCellDef="let element"><a *ngFor="let pm of element.projectManager">{{pm.name + ','}}</a></mat-cell>
     </ng-container>
     <ng-container matColumnDef="client">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Client</mat-header-cell>
